
PROJECT(Qmemtable_test)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6.0 FATAL_ERROR)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../../)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../../include)

FIND_LIBRARY(libqlevel "qlevel" PATH ${CMAKE_CURRENT_BINARY_DIR}/../lib)

SET(Qtestsrc memtable_test.cpp)

ADD_EXECUTABLE(memtabletest ${Qtestsrc})
TARGET_LINK_LIBRARIES(memtabletest ${libqlevel})